<resources>
    <string name="app_name">Mars Real Estate</string>
    <string name="show_all">Show all</string>
    <string name="show_rent">Rent</string>
    <string name="show_buy">Buy</string>
    <string name="type_rent">Rent</string>
    <string name="type_sale">Sale</string>
    <string name="display_type">For %s</string>
    <string name="display_price_monthly_rental">$%,.0f/month</string>
    <string name="display_price">$%,.0f</string>
    <string name="display_price_money">%,.0f $</string>
    <string name="settings">Settings</string>
    <string name="property">Property %s</string>

    <string name="lorem_short">Reprehenderit voluptatem eum quibusdam eveniet aspernatur quia. </string>
    <string name="lorem_medium">Reprehenderit voluptatem eum quibusdam eveniet aspernatur quia. Ea eaque quam assumenda. </string>
    <string name="lorem_long">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vehicula at massa vel efficitur. Phasellus vulputate purus id commodo pharetra. Curabitur venenatis risus orci, a posuere sem ultricies quis. Cras sollicitudin et diam id luctus. Etiam est nibh, eleifend eget gravida vel, accumsan ut leo. Cras egestas urna eget risus dapibus, non blandit diam ultrices. Sed nec sem tristique, aliquam lacus id, dictum nibh.
    </string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="property_xxx">Property %1$s</string>
    <string name="to_rent">To rent</string>
    <string name="to_buy">To buy</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="success_bought">You successfully bought property %s !</string>
    <string name="price_a_month">%,.0f $ / month</string>
    <string name="price_total">Price : %,.0f $</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="mars_properties">Mars properties available</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_id">Search by id</string>
    <string name="all">All</string>


    <string name="favorites">Favorites</string>
    <string name="browse">Browse</string>

    <string name="added_on">Added on %1$td %1$tb %1$tY %1$tk:%1$tM</string>
    <string name="available_since">Available since %1$td %1$tb %1$tY </string>
    <string name="more_infos">More infos</string>


    <string name="property_added_favorites">Property added to favorites</string>
    <string name="property_removed_favorites">Property removed from favorites</string>
    <string name="property_not_added_favorites_error">Property could not be added to favorites</string>
    <string name="property_not_removed_favorites_error">Property could not be removed from favorites</string>


    <string name="incorrect_email">Incorrect email</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="password_empty">Empty password</string>
    <string name="password_too_short">Password too short</string>
    <string name="login">Login</string>
    <string name="welcome_xxx">Welcome %1s</string>
    <string name="confirm">Confirm</string>
    <string name="no_more_properties">There is no more properties</string>

    <string name="card_number_only_digits">Card number must contain only digits</string>
    <string name="card_number_length">Card number must be 16 digits long</string>
    <string name="wrong_format">Wrong format</string>

    <string name="enter_valid_year">Please enter a valid year</string>
    <string name="enter_valid_month">Please enter a valid month</string>

    <string name="secret_code_only_digits">Secret code must contain only digits</string>
    <string name="secret_code_length">Secret code must be 3 digits long</string>
    <string name="property_recovered_empty">No property to recover</string>
    <string name="next">next</string>
    <string name="recap">Recap</string>
    <string name="purchase">Purchase</string>
    <string name="error">Error</string>
    <string name="priceAscending">Price asc.</string>
    <string name="priceDescending">Price desc.</string>

    <string name="interested_by_what_you_see">Interested by what you see?</string>
    <string name="available_for_purchase_since">This property is available for purchase since &lt;b>20/08/2020&lt;/b></string>
    <string name="zero_people_have_already_seen_this_property">You are the &lt;b>first one&lt;/b> to see this property</string>
    <string name="defaultSorting" >Default</string>
    <string name="navigate_up">Navigate up</string>
    <string name="biometric_auth_unavailable">Your device is not compatible with biometric authentication</string>
    <string name="price_too_high">Price is too high</string>
    <string name="need_positive_value">Please provide a positive value</string>

    <plurals name="x_people_have_already_seen_this_property">
        <item quantity="one">&lt;b>One person&lt;/b> has already seen this property</item>
        <item quantity="other">&lt;b>%s people&lt;/b> have already seen this property</item>


        </plurals>


    </resources>
