<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.marsrealestate.navigation.NavigationViewModel" />

        <variable
            name="loginViewModel"
            type="com.example.marsrealestate.login.LoginViewModel" />

        <variable
            name="fragment"
            type="com.example.marsrealestate.navigation.NavigationFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        >





            <!--        <ScrollView-->
            <!--            android:id="@+id/scroll"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_weight="1"-->

            <!--            >-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:background="?colorBackground"

                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/topImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="@dimen/margin_medium"

                    android:text="@string/app_name"
                    android:textAppearance="?textAppearanceHeadline5"
                    android:textColor="?colorSecondary"

                    />


                <com.example.marsrealestate.custom.NavigationItemView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"


                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"



                    android:onClick="@{ () -> fragment.changeDestination(@id/dest_login)}"
                    app:isActive="@{ viewModel.currentDestinationId == @id/dest_login}"
                    app:startIcon="@{loginViewModel.isLoggedIn() ? @drawable/astronaut : @drawable/ic_login}"
                    app:textColor="@color/control_activable"
                    app:title="@{ loginViewModel.userLogged != null ? loginViewModel.userLogged : @string/login}"

                    tools:startIcon="@drawable/ic_login"
                    tools:title="@string/login"

                    />

                <com.example.marsrealestate.custom.NavigationItemView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginEnd="@dimen/margin_medium"

                    android:onClick="@{ () -> fragment.changeDestination(@id/dest_overview)}"
                    app:isActive="@{ viewModel.currentDestinationId == @id/dest_overview}"
                    app:startIcon="@drawable/mars_notification"

                    app:textColor="@color/control_activable"
                    app:title="@string/browse"


                    />

                <com.example.marsrealestate.custom.NavigationItemView
                    android:id="@+id/favorites"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"


                    android:layout_marginEnd="@dimen/margin_medium"


                    android:onClick="@{ () -> fragment.changeDestination(@id/dest_favorites)}"
                    app:endText="@{viewModel.favoritesCount.toString()}"
                    app:isActive="@{ viewModel.currentDestinationId == @id/dest_favorites}"

                    app:startIcon="@drawable/ic_favorite"
                    app:textColor="@color/control_activable"
                    app:title="@string/favorites"

                    />
                <com.example.marsrealestate.custom.NavigationItemView
                    android:id="@+id/sell"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"


                    android:layout_marginEnd="@dimen/margin_medium"


                    android:onClick="@{ () -> fragment.changeDestination(@id/dest_sell)}"
                    app:isActive="@{ viewModel.currentDestinationId == @id/dest_sell}"
                    app:startIcon="@drawable/ic_cart_filled"

                    app:textColor="@color/control_activable"
                    app:title="Sell your property"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"

                    android:background="?android:listDivider"
                    />

                <com.example.marsrealestate.custom.NavigationItemView
                    android:id="@+id/settings"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"


                    android:layout_marginEnd="@dimen/margin_medium"

                    android:onClick="@{ () -> fragment.changeDestination(@id/dest_settings)}"
                    app:isActive="@{ viewModel.currentDestinationId == @id/dest_settings}"
                    app:startIcon="@drawable/ic_manage"

                    app:textColor="@color/control_activable"
                    app:title="@string/settings"


                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"

                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_large"

                    android:elevation="-1dp"
                    android:src="@drawable/ic_launcher_foreground"
                    android:visibility="@{ @bool/showPlanetNavigation ? View.VISIBLE : View.GONE }"


                    />

            </LinearLayout>


            <!--        </ScrollView>-->






    </ScrollView>
</layout>