<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.example.marsrealestate.util.Result"/>

        <variable
            name="viewModel"
            type="com.example.marsrealestate.payment.RecapPaymentViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        tools:context=".purchase.PurchaseFragment">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorBackground"
            app:layout_constraintEnd_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase"
            android:textAppearance="?textAppearanceHeadline3"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"

            />

        <TextView
            android:id="@+id/card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"


            android:text="Card "
            android:textAppearance="?textAppearanceHeadline5"


            app:layout_constraintEnd_toStartOf="@+id/card_number_detail"
            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/card_number_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text='@{viewModel.paymentOption.labelHidden ?? " " }'
            tools:text="xxxx xxxx xxxx 0456"

            android:textAppearance="?textAppearanceHeadline5"


            app:layout_constraintBottom_toBottomOf="@id/card_number"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_number" />

        <TextView
            android:id="@+id/property_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"


            android:text="Property"
            android:textAppearance="?textAppearanceHeadline5"


            app:layout_constraintStart_toStartOf="@id/card_number"
            app:layout_constraintTop_toBottomOf="@id/card_number"

            />

        <TextView
            android:id="@+id/property_id_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"


            android:text="@{viewModel.propertyToBuy.id}"
            tools:text="1547809"
            android:textAppearance="?textAppearanceHeadline5"


            app:layout_constraintEnd_toEndOf="@id/card_number_detail"
            app:layout_constraintTop_toBottomOf="@id/card_number"

            />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"


            android:text="Price"
            android:textAppearance="?textAppearanceHeadline5"


            app:layout_constraintStart_toStartOf="@id/property_id"
            app:layout_constraintTop_toBottomOf="@id/property_id"

            />

        <TextView
            android:id="@+id/price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"


            android:text="@{@string/display_price_money(viewModel.propertyToBuy.price) }"
            tools:text="30000 $"
            android:textAppearance="?textAppearanceHeadline5"
            android:textColor="?colorSecondary"


            app:layout_constraintEnd_toEndOf="@id/card_number_detail"
            app:layout_constraintTop_toBottomOf="@id/property_id"

            />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"


            android:textAppearance="?textAppearanceHeadline5"
            android:textColor="?colorError"
            android:text="@string/error"
            android:alpha="0"
            app:fadeInIf="@{ viewModel.operationConfirmTransaction.isError }"

            app:layout_constraintTop_toTopOf="@id/confirm_button"
            app:layout_constraintBottom_toBottomOf="@id/confirm_button"
            app:layout_constraintEnd_toStartOf="@id/confirm_button"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"

            android:onClick="@{ () -> viewModel.confirmTransaction()}"

            android:text="@string/confirm"
            app:fadeInIf="@{ ! viewModel.operationConfirmTransaction.isLoading }"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:marginBottomPlusInsets="@{@dimen/margin_medium}" />

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="invisible"
            app:fadeInIf="@{viewModel.operationConfirmTransaction.isLoading }"

            app:layout_constraintBottom_toBottomOf="@id/confirm_button"
            app:layout_constraintEnd_toEndOf="@id/confirm_button"
            app:layout_constraintStart_toStartOf="@id/confirm_button"
            app:layout_constraintTop_toTopOf="@id/confirm_button"


            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>